Fixed padding on wrap.

--- a/_scss/_buttons.scss
+++ b/_scss/_buttons.scss
@@ -16,7 +16,7 @@
   margin: .8em 0 0;
   padding: .8em 1.6em;
   font-size: $f16px;
-  font-family: $font-sans-light;
+  font-family: $font-sans;
   text-transform: uppercase;
   border-radius: .25em;
   letter-spacing: .02em;
