--- a/_scss/_layout.scss
+++ b/_scss/_layout.scss
@@ -19,7 +19,7 @@
   } 
 
   @include breakpoint(desktop-lg) {
-    padding: 0 6.5rem;
+    padding: 0 7.5rem;
   } 
 }
 
